--- a/app/css/style.css
+++ b/app/css/style.css
@@ -72,9 +72,9 @@ label {
     background-color: #f04f57;
     color: #fff; }
 
-@media (max-width: 620px) {
+@media (max-width: 650px) {
   .btn {
-    padding: 15px 45px; } }
+    padding: 12px 45px; } }
 
 .form-control {
   padding: 13px 25px;
@@ -88,6 +88,10 @@ label {
 
 .ltr .form-control {
   text-align: left; }
+
+@media (max-width: 650px) {
+  .form-control {
+    padding: 9px 25px; } }
 
 @font-face {
   font-family: 'Noto Sans Hebrew';
@@ -161,9 +165,9 @@ label {
   @media (max-width: 800px) {
     .footer .soc-btn {
       display: none; } }
-  @media (max-width: 620px) {
+  @media (max-width: 650px) {
     .footer .soc-btn a + a {
-      margin-left: 6px; }
+      margin-left: 8px; }
     .footer .soc-btn .google {
       background-position: 0px -95px;
       width: 33px;
@@ -319,8 +323,7 @@ label {
             flex-wrap: wrap;
     margin-top: 36px;
     border-top: 1px solid #dadada;
-    padding-top: 15px;
-    padding-bottom: 20px; }
+    padding-top: 15px; }
     .footer .copyright a {
       display: inline-block; }
     .footer .copyright .soc-btn.mobile {
@@ -420,7 +423,7 @@ label {
         margin-left: auto;
         margin-right: -3px; }
         .footer .copyright .copyright-cards a + a {
-          margin-left: 3px; }
+          margin-left: 4px; }
     .footer.ltr .copyright .soc-btn.mobile {
       margin-right: -2px; }
     .footer.ltr .copyright .copyright-cards {
