--- a/app/css/style.css
+++ b/app/css/style.css
@@ -52,9 +52,13 @@ label {
 
 /*RESET END*/
 .container {
-  max-width: 970px;
+  max-width: 1005px;
   margin: 0 auto;
   padding: 0 20px; }
+
+@media (max-width: 650px) {
+  .container {
+    padding: 0 16px; } }
 
 .flex-container {
   display: -webkit-box;
@@ -63,7 +67,8 @@ label {
   display: flex; }
 
 .btn {
-  padding: 13px 45px;
+  letter-spacing: 0.5px;
+  padding: 10px 42px;
   font-size: 18px;
   background-color: transparent; }
   .btn.btn-primary {
@@ -77,11 +82,11 @@ label {
     padding: 12px 45px; } }
 
 .form-control {
-  padding: 13px 25px;
+  padding: 10px 25px;
   background-color: transparent;
   border: 1px solid #cccccc;
   font-size: 15px;
-  letter-spacing: 0.4px;
+  letter-spacing: 0.8px;
   line-height: 24px;
   text-align: right;
   color: #848484; }
@@ -108,7 +113,7 @@ label {
   font-style: normal; }
 
 .footer {
-  padding: 20px 0; }
+  padding: 18px 0; }
   .footer.ltr .soc-btn {
     -webkit-box-pack: end;
     -webkit-justify-content: flex-end;
@@ -185,7 +190,7 @@ label {
     -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin-top: -10px; }
+    margin-top: -8px; }
     .footer .footer-text p {
       max-width: 500px;
       font-size: 18px;
@@ -195,6 +200,9 @@ label {
   @media (max-width: 800px) {
     .footer .footer-text p {
       font-size: 15px; } }
+  @media (max-width: 650px) {
+    .footer .footer-text {
+      margin-top: -1px; } }
   .footer .footer-question {
     -webkit-box-pack: center;
     -webkit-justify-content: center;
@@ -214,6 +222,9 @@ label {
       margin-left: 10px; }
     .footer .footer-question .form-control {
       width: 378px; }
+  @media (max-width: 650px) {
+    .footer .footer-question input[type='submit'] {
+      line-height: 24px; } }
   .footer.ltr .footer-question input[type='text'] {
     -webkit-box-ordinal-group: 2;
     -webkit-order: 1;
@@ -262,25 +273,29 @@ label {
     -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center;
-    font-size: 14px;
+    font-size: 15px;
     color: #2196f3;
-    margin-top: 25px; }
+    margin-top: 24px; }
     .footer .footer-big-links a {
       margin-top: 15px; }
     .footer .footer-big-links a + a {
       margin-left: 37px; }
   @media (max-width: 650px) {
     .footer .footer-big-links {
-      -webkit-justify-content: space-around;
-          -ms-flex-pack: distribute;
-              justify-content: space-around; }
+      -webkit-box-pack: justify;
+      -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+              justify-content: space-between; }
       .footer .footer-big-links a {
-        padding: 0 18px; }
+        margin-top: 17px;
+        width: 25%;
+        text-align: center; }
         .footer .footer-big-links a:first-child, .footer .footer-big-links a:nth-child(2) {
           -webkit-box-ordinal-group: 3;
           -webkit-order: 2;
               -ms-flex-order: 2;
-                  order: 2; }
+                  order: 2;
+          width: 50%; }
       .footer .footer-big-links a + a {
         margin-left: 0; } }
   .footer .footer-small-links {
@@ -298,12 +313,12 @@ label {
       margin-left: 37px; }
   @media (max-width: 650px) {
     .footer .footer-small-links {
-      margin-top: 35px;
+      margin-top: 39px;
       -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-          -ms-flex-direction: column;
-              flex-direction: column;
+      -webkit-box-direction: reverse;
+      -webkit-flex-direction: column-reverse;
+          -ms-flex-direction: column-reverse;
+              flex-direction: column-reverse;
       text-align: right;
       border-top: 1px solid #b0b0b0;
       margin-left: -20px;
@@ -312,9 +327,11 @@ label {
         margin-top: 0;
         border-bottom: 1px solid #b0b0b0;
         background-color: #ececec;
-        padding: 9px 18px; }
+        padding: 8px 18px; }
       .footer .footer-small-links a + a {
         margin-left: 0; }
+      .footer .footer-small-links a:first-child {
+        display: none; }
     .footer.ltr .footer-small-links {
       text-align: left; } }
   .footer .footer-bottom {
@@ -324,13 +341,14 @@ label {
       -webkit-flex-wrap: wrap;
           -ms-flex-wrap: wrap;
               flex-wrap: wrap;
-      padding-top: 15px; }
+      padding-top: 14px; }
       .footer .footer-bottom .copyright a {
         display: inline-block; }
       .footer .footer-bottom .copyright .soc-btn.mobile {
         display: none; }
       .footer .footer-bottom .copyright .copyright-logo {
-        display: block; }
+        display: block;
+        margin-left: -3px; }
         .footer .footer-bottom .copyright .copyright-logo a {
           background-image: url(../img/sprite.png);
           background-position: 0px 0px;
@@ -341,7 +359,7 @@ label {
         -webkit-align-items: center;
             -ms-flex-align: center;
                 align-items: center;
-        margin-left: 50px; }
+        margin-left: 43px; }
         .footer .footer-bottom .copyright .copyright-cards a + a {
           margin-left: 5px; }
         .footer .footer-bottom .copyright .copyright-cards .bitc {
@@ -371,7 +389,9 @@ label {
           height: 20px; }
       .footer .footer-bottom .copyright .copyright-text {
         margin-left: auto;
-        text-align: right; }
+        text-align: right;
+        line-height: 21px;
+        letter-spacing: 0.5px; }
   .footer.ltr .footer-bottom .copyright .copyright-text {
     margin-right: auto;
     margin-left: 0;
@@ -384,7 +404,8 @@ label {
       -webkit-box-pack: justify;
       -webkit-justify-content: space-between;
           -ms-flex-pack: justify;
-              justify-content: space-between; }
+              justify-content: space-between;
+      padding-top: 16px; }
       .footer .footer-bottom .copyright .soc-btn.mobile,
       .footer.ltr .footer-bottom .copyright .soc-btn.mobile {
         display: -webkit-box;
@@ -397,7 +418,8 @@ label {
       .footer .footer-bottom .copyright .copyright-text,
       .footer.ltr .footer-bottom .copyright .copyright-text {
         width: 100%;
-        margin-top: 20px;
+        margin-top: 18px;
+        line-height: 18px;
         -webkit-box-ordinal-group: 4;
         -webkit-order: 3;
             -ms-flex-order: 3;
@@ -419,7 +441,8 @@ label {
       margin-top: 0;
       border-top: none; }
       .footer .footer-bottom .copyright .copyright-text {
-        font-size: 10px; }
+        font-size: 10px;
+        letter-spacing: 0.2px; }
       .footer .footer-bottom .copyright .soc-btn.mobile {
         margin-left: -2px; }
       .footer .footer-bottom .copyright .copyright-cards {
