--- a/app/css/style.css
+++ b/app/css/style.css
@@ -11,8 +11,6 @@ body {
   line-height: 18px;
   font-weight: normal;
   background-color: #fff; }
-  body .ltr {
-    font-family: "Arial", sans-serif; }
 
 h1, h2, h3, h4, h5, h6, p {
   margin: 0; }
@@ -114,37 +112,6 @@ label {
 
 .footer {
   padding: 18px 0; }
-  .footer.ltr .soc-btn {
-    -webkit-box-pack: end;
-    -webkit-justify-content: flex-end;
-        -ms-flex-pack: end;
-            justify-content: flex-end; }
-  .footer.ltr .footer-question input:first-child {
-    -webkit-border-radius: 25px 0 0 25px;
-            border-radius: 25px 0 0 25px; }
-  .footer.ltr .footer-question input:last-child {
-    -webkit-border-radius: 0 25px 25px 0;
-            border-radius: 0 25px 25px 0; }
-  .footer.ltr .footer-question input + input {
-    margin-right: 10px; }
-  .footer.ltr .copyright .copyright-logo {
-    -webkit-box-ordinal-group: 4;
-    -webkit-order: 3;
-        -ms-flex-order: 3;
-            order: 3;
-    margin-left: auto; }
-  .footer.ltr .copyright .copyright-cards {
-    -webkit-box-ordinal-group: 3;
-    -webkit-order: 2;
-        -ms-flex-order: 2;
-            order: 2; }
-  .footer.ltr .copyright .copyright-text {
-    -webkit-box-ordinal-group: 2;
-    -webkit-order: 1;
-        -ms-flex-order: 1;
-            order: 1;
-    margin-left: 0;
-    text-align: left; }
   .footer .soc-btn {
     -webkit-box-pack: start;
     -webkit-justify-content: flex-start;
@@ -223,48 +190,27 @@ label {
     .footer .footer-question .form-control {
       width: 378px; }
   @media (max-width: 650px) {
-    .footer .footer-question input[type='submit'] {
-      line-height: 24px; } }
-  .footer.ltr .footer-question input[type='text'] {
-    -webkit-box-ordinal-group: 2;
-    -webkit-order: 1;
-        -ms-flex-order: 1;
-            order: 1;
-    -webkit-border-radius: 25px 0 0 25px;
-            border-radius: 25px 0 0 25px; }
-  .footer.ltr .footer-question input[type='submit'] {
-    -webkit-box-ordinal-group: 3;
-    -webkit-order: 2;
-        -ms-flex-order: 2;
-            order: 2;
-    -webkit-border-radius: 0 25px 25px 0;
-            border-radius: 0 25px 25px 0; }
-  @media (max-width: 650px) {
-    .footer .footer-question,
-    .footer.ltr .footer-question {
+    .footer .footer-question {
       margin-top: 18px; }
       .footer .footer-question input[type='text'],
-      .footer .footer-question input[type='submit'],
-      .footer.ltr .footer-question input[type='text'],
-      .footer.ltr .footer-question input[type='submit'] {
+      .footer .footer-question input[type='submit'] {
         -webkit-border-radius: 25px;
                 border-radius: 25px;
         width: 100%; }
-      .footer .footer-question input[type='text'],
-      .footer.ltr .footer-question input[type='text'] {
+      .footer .footer-question input[type='text'] {
         margin-left: 0;
         text-align: center;
         -webkit-box-ordinal-group: 2;
         -webkit-order: 1;
             -ms-flex-order: 1;
                 order: 1; }
-      .footer .footer-question input[type='submit'],
-      .footer.ltr .footer-question input[type='submit'] {
+      .footer .footer-question input[type='submit'] {
         -webkit-box-ordinal-group: 3;
         -webkit-order: 2;
             -ms-flex-order: 2;
                 order: 2;
-        margin-top: 15px; } }
+        margin-top: 15px;
+        line-height: 24px; } }
   .footer .footer-big-links {
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
@@ -331,9 +277,7 @@ label {
       .footer .footer-small-links a + a {
         margin-left: 0; }
       .footer .footer-small-links a:first-child {
-        display: none; }
-    .footer.ltr .footer-small-links {
-      text-align: left; } }
+        display: none; } }
   .footer .footer-bottom {
     margin-top: 35px;
     border-top: 1px solid #dadada; }
@@ -392,50 +336,28 @@ label {
         text-align: right;
         line-height: 21px;
         letter-spacing: 0.5px; }
-  .footer.ltr .footer-bottom .copyright .copyright-text {
-    margin-right: auto;
-    margin-left: 0;
-    text-align: left; }
-  .footer.ltr .footer-bottom .copyright .copyright-logo {
-    margin-left: 50px; }
   @media (max-width: 800px) {
-    .footer .footer-bottom .copyright,
-    .footer.ltr .footer-bottom .copyright {
+    .footer .footer-bottom .copyright {
       -webkit-box-pack: justify;
       -webkit-justify-content: space-between;
           -ms-flex-pack: justify;
               justify-content: space-between;
       padding-top: 16px; }
-      .footer .footer-bottom .copyright .soc-btn.mobile,
-      .footer.ltr .footer-bottom .copyright .soc-btn.mobile {
+      .footer .footer-bottom .copyright .soc-btn.mobile {
         display: -webkit-box;
         display: -webkit-flex;
         display: -ms-flexbox;
         display: flex; }
-      .footer .footer-bottom .copyright .copyright-logo,
-      .footer.ltr .footer-bottom .copyright .copyright-logo {
+      .footer .footer-bottom .copyright .copyright-logo {
         display: none; }
-      .footer .footer-bottom .copyright .copyright-text,
-      .footer.ltr .footer-bottom .copyright .copyright-text {
+      .footer .footer-bottom .copyright .copyright-text {
         width: 100%;
         margin-top: 18px;
         line-height: 18px;
         -webkit-box-ordinal-group: 4;
         -webkit-order: 3;
             -ms-flex-order: 3;
-                order: 3; }
-    .footer.ltr .copyright .soc-btn.mobile {
-      -webkit-box-ordinal-group: 3;
-      -webkit-order: 2;
-          -ms-flex-order: 2;
-              order: 2;
-      margin-left: auto; }
-    .footer.ltr .copyright .copyright-cards {
-      -webkit-box-ordinal-group: 2;
-      -webkit-order: 1;
-          -ms-flex-order: 1;
-              order: 1;
-      margin-left: 0; } }
+                order: 3; } }
   @media (max-width: 650px) {
     .footer .footer-bottom {
       margin-top: 0;
@@ -449,11 +371,7 @@ label {
         margin-left: auto;
         margin-right: -3px; }
         .footer .footer-bottom .copyright .copyright-cards a + a {
-          margin-left: 4px; }
-    .footer.ltr .copyright .soc-btn.mobile {
-      margin-right: -2px; }
-    .footer.ltr .copyright .copyright-cards {
-      margin-left: -2px; } }
+          margin-left: 4px; } }
 
 @media (max-width: 800px) {
   .footer {
